Add chroma.js for ColorBrewer color scale.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
   <script type="text/javascript" src="third-party/Detector.js"></script>
   <script type="text/javascript" src="third-party/three.min.js"></script>
+  <script type="text/javascript" src="third-party/chroma.min.js"></script>
   <script type="text/javascript" src="third-party/Tween.js"></script>
   <script type="text/javascript" src="globe.js"></script>
   <script type="text/javascript">
